# getting-started

./: .clang-format  DCF_Demo.md  DCF_Safe_Update.md
STMicroelectronics/STM32L4_L4+/: CMakeLists.txt  create_package.md  readme.md
STMicroelectronics/STM32L4_L4+/app/: CMakeLists.txt  main.c  nx_client.c  nx_client.h  stm_networking.c
STMicroelectronics/STM32L4_L4+/app/az_ulib_dm/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/app/az_ulib_dm/inc/: _az_nx_blob_client.h  _az_ulib_dm_blob.h  _az_ulib_dm_blob_ustream_interface.h  _az_ulib_dm_interface.h  _az_ulib_dm_package.h  _az_ulib_registry_interface.h  az_ulib_dm_api.h  az_ulib_dm_blob_ustream_forward_interface.h  az_ulib_dm_blob_ustream_forward_interface.h~HEAD  az_ulib_dm_blob_ustream_interface.h  az_ulib_registry_api.h  dictionary_1_model.h  dm_1_model.h  packages_1_model.h  registry_1_model.h  stm32l475_flash_driver.h
STMicroelectronics/STM32L4_L4+/app/az_ulib_dm/src/: _az_nx_blob_client.c  _az_ulib_dm_blob.c  _az_ulib_dm_blob_ustream_interface.c  az_ulib_dm.c  az_ulib_dm_blob_ustream_forward_interface.c  az_ulib_dm_blob_ustream_interface.c  az_ulib_dm_interface.c  az_ulib_registry.c  az_ulib_registry_interface.c  stm32l475_flash_driver.c
STMicroelectronics/STM32L4_L4+/app/cipher/: CMakeLists.txt  cipher_1_model.h
STMicroelectronics/STM32L4_L4+/app/cipher/cipher_v1i1/: cipher_v1i1.c  cipher_v1i1.h
STMicroelectronics/STM32L4_L4+/app/cipher/cipher_v1i1/interfaces/: cipher_v1i1_interface.c
STMicroelectronics/STM32L4_L4+/app/cipher/cipher_v2i1/: cipher_v2i1.c  cipher_v2i1.h
STMicroelectronics/STM32L4_L4+/app/cipher/cipher_v2i1/interfaces/: cipher_v2i1_interface.c
STMicroelectronics/STM32L4_L4+/app/dcf_tcp_gateways/: CMakeLists.txt  dcf_tcp_gateways.c  dcf_tcp_gateways.h
STMicroelectronics/STM32L4_L4+/app/sprinkler/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/app/sprinkler/inc/: sprinkler_1_model.h  sprinkler_v1i1.h  sprinkler_v1i1_interface.h
STMicroelectronics/STM32L4_L4+/app/sprinkler/src/: sprinkler_v1i1.c  sprinkler_v1i1_interface.c
STMicroelectronics/STM32L4_L4+/app/startup/gnu/: STM32L475xx_FLASH.ld  STM32L4S5xx_FLASH.ld  tx_initialize_low_level.S
STMicroelectronics/STM32L4_L4+/app/startup/iar/: tx_initialize_low_level.s
STMicroelectronics/STM32L4_L4+/lib/netxduo/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/samples/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/samples/key_vault.1/: CMakeLists.txt  key_vault.c  key_vault.h  key_vault_interface.c
STMicroelectronics/STM32L4_L4+/samples/key_vault.1/startup/gnu/: STM32L475xx_FLASH.ld  gcc_setup.s
STMicroelectronics/STM32L4_L4+/samples/key_vault.2/: CMakeLists.txt  cipher_1_model.h  key_vault.c  key_vault.h  key_vault_interface.c
STMicroelectronics/STM32L4_L4+/samples/key_vault.2/startup/gnu/: STM32L475xx_FLASH.ld  txm_module_preamble.S
STMicroelectronics/STM32L4_L4+/samples/key_vault_v1i1/: CMakeLists.txt  cipher_1_model.h  key_vault_1_model.h  key_vault_v1i1.c  key_vault_v1i1.h  key_vault_v1i1_interface.c
STMicroelectronics/STM32L4_L4+/samples/key_vault_v1i1/startup/gnu/: STM32L475xx_FLASH.ld  gcc_setup.s
STMicroelectronics/STM32L4_L4+/samples/key_vault_v2i1/: CMakeLists.txt  key_vault_v2i1.c  key_vault_v2i1.h  key_vault_v2i1_interface.c
STMicroelectronics/STM32L4_L4+/samples/key_vault_v2i1/startup/gnu/: STM32L475xx_FLASH.ld  precondition_fail.c  txm_module_preamble.S
STMicroelectronics/STM32L4_L4+/samples/sprinkler.1/: CMakeLists.txt  sprinkler.c  sprinkler.h  sprinkler_1_model.h  sprinkler_interface.c
STMicroelectronics/STM32L4_L4+/samples/sprinkler.1/startup/gnu/: tx_initialize_low_level.S
STMicroelectronics/STM32L4_L4+/samples/sprinkler_v1i1/: CMakeLists.txt  sprinkler_1_model.h  sprinkler_v1i1.c  sprinkler_v1i1.h  sprinkler_v1i1_interface.c
cmake/: arm-gcc-cortex-m4.cmake
